# widget

./: .clang-format  .gitattributes  .widget.code-workspace  CMakeLists.txt  CMakePresets.json  main.cpp  project.cmake
exe/: main.cpp
include/widget/: AlignmentFlag.cpp  AlignmentFlag.h  Button.cpp  Button.h  Conversion.cpp  Conversion.h  CoreApplication.cpp  CoreApplication.h  CustomItemDelegate.cpp  CustomItemDelegate.h  DateTimeRangeSubmit.cpp  DateTimeRangeSubmit.h  FusionApplication.cpp  FusionApplication.h  GLWidget.cpp  GLWidget.h  IndependentQWidget.cpp  IndependentQWidget.h  Input.cpp  Input.h  InputWidget.cpp  InputWidget.h  MainWindow.cpp  MainWindow.h  PainterGuard.cpp  PainterGuard.h  RangeSubmit.cpp  RangeSubmit.h  SafeDelegate.cpp  SafeDelegate.h  SafeEmitter.cpp  SafeEmitter.h  Submit.cpp  Submit.h  Table.cpp  Table.h  WidgetSet.cpp  WidgetSet.h  convert.cpp  convert.h  (+7 more)
include/widget/box/: FixSizeSpacingBlock.cpp  FixSizeSpacingBlock.h  FormTableBox.cpp  FormTableBox.h  FormTableBoxItem.cpp  FormTableBoxItem.h  GridBox.cpp  GridBox.h  GridBoxItem.cpp  GridBoxItem.h  HBox.cpp  HBox.h  IBox.cpp  IBox.h  LabelDataGridItem.cpp  LabelDataGridItem.h  LabelDataUnitGridItem.cpp  LabelDataUnitGridItem.h  LabelValueGridItem.cpp  LabelValueGridItem.h  LabelValueUnitGridItem.cpp  LabelValueUnitGridItem.h  VBox.cpp  VBox.h
include/widget/button/: Button.cpp  Button.h
include/widget/dialog/: Dialog.cpp  Dialog.h
include/widget/indicator/: IndicatorLight.cpp  IndicatorLight.h
include/widget/io/: MemoryMapFile.cpp  MemoryMapFile.h  Serial.cpp  Serial.h  StreamIODevice.cpp  StreamIODevice.h  serial_handle.cpp  serial_handle.h
include/widget/layout/: FormTableItem.cpp  FormTableItem.h  FormTableLayout.cpp  FormTableLayout.h  GridLayout.cpp  GridLayout.h  GridPosition.cpp  GridPosition.h  HBoxLayout.cpp  HBoxLayout.h  Padding.cpp  Padding.h  VBoxLayout.cpp  VBoxLayout.h
include/widget/line-input-widget/: CheckBox.cpp  CheckBox.h  CheckState.cpp  CheckState.h  ComboBox.cpp  ComboBox.h  DateTimeEdit.cpp  DateTimeEdit.h  DateTimeRangeSubmit.cpp  DateTimeRangeSubmit.h  Input.cpp  Input.h  IntRangeSubmit.cpp  IntRangeSubmit.h  RangeSubmit.cpp  RangeSubmit.h  Submit.cpp  Submit.h
include/widget/table/: CurrentChangeEventArgs.h  ITableDataModel.cpp  ITableDataModel.h  InfiniteTableDataModel.cpp  InfiniteTableDataModel.h  InfinityTableDataModel.cpp  InfinityTableDataModel.h  RowInsertedEventArgs.h  RowRemovedEventArgs.h  SortingStatus.h  Table.cpp  Table.h  TableSortingParameter.cpp  TableSortingParameter.h  VerticalScrollEventArgs.cpp  VerticalScrollEventArgs.h  (+2 more)
private_src/: CustomItemDelegate.cpp  CustomItemDelegate.h  Table.CustomItemDelegate.cpp  Table.PrivateTable.cpp  Table.PrivateTable.h  Table.TableDataModel.cpp  Table.TableDataModel.h  pch.h
private_src/Table/: Table.CustomItemDelegate.cpp  Table.CustomItemDelegate.h  Table.HeaderView.cpp  Table.HeaderView.h  Table.PrivateTable.cpp  Table.PrivateTable.h  Table.TableDataModel.cpp  Table.TableDataModel.h  Table.TableDataModelWrapper.cpp  Table.TableDataModelWrapper.h
src/: GLWidget.cpp  GLWidget.h  MainWindow.cpp  MainWindow.h  test_qwt.cpp
test/: main.cpp
test/widget/: MainWindow.cpp  MainWindow.h
(+24 files in other folders)
